# QRS_Detector

./: .gitignore  README.md  README2.md  pyproject.toml
src/QRS_DETECTOR/: QRS_Detector.py  __init__.py  seuil_dynamique.py
src/fast_qrs_detector/: __init__.py  fast_qrs_detector.py  print_qrs.py
src/fast_qrs_detector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
